--- a/pages/a-propos.html
+++ b/pages/a-propos.html
@@ -17,7 +17,7 @@
     <!-- place navbar here -->
     <nav class="navbar navbar-expand-lg bg-primary">
       <div class="container-fluid">
-        <a class="navbar-brand text-white" href="../">SunuDaara</a>
+        <a class="navbar-brand text-white fw-bolder" href="../index.html">SunuDaara</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active text-white" aria-current="page" href="./cours.html">Cours</a>
+              <a class="nav-link active text-white" aria-current="page" href="../index.html">Cours</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="./a-propos.html">À propos</a>
